<resources>
    <string name="app_name">Happy Birthday</string>
    <string name="birtday_card_description">Birtday card</string>
    <string name="cost_of_service">Cost of Service</string>
    <string name="service_question">How was the service?</string>
    <string name="option_18">Good (18%)</string>
    <string name="option_20">Amazing (20%)</string>
    <string name="option_15">Okay (15%)</string>
    <string name="round_up_tip">Round up tip?</string>
    <string name="calculate">Calculate</string>
    <string name="tip_amount">Tip Amount: %s</string>
</resources>